fixed: readonly empty fields are displayed but should be invisible, regression in https://github.com/enketo/enketo-core/commit/2c4fd5b1fec0a20eaa941008ed62083e862c5f99#diff-e7a86dcba9e5dfc327ab41257a832346

--- a/src/sass/core/_main.scss
+++ b/src/sass/core/_main.scss
@@ -293,7 +293,9 @@ $media-margin: 10px;
 
     input[readonly].empty,
     select[readonly].empty,
-    textarea[readonly].empty,
+    textarea[readonly].empty{
+        display: none;
+    }
 
     strong {
         font-size: inherit;
